Informe:
	30/09/2022: Informe iniciado y avanzado

Código:
	01/10/2022: Constructores TDAs pixbit, pixhex y pixrgb listos
	02/10/2022: Image agregado
	06/10/2022: Bitmap, Hexmap y Pixmap agregadas
	07/10/2022: imageFlipH agregado
	08/10/2022: imageFlipV agregado
	09/10/2022: imageCrop agregado
	10/10/2022: imageRGBToHex agregado
	11/10/2022: IsCompress y Histogram agregados
	12/10/2022: Rotate90, Compress, ChangePixel, invertColorRGB agregados